fix: links with green text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
           href="https://www.notion.so/lynx-pardelle/Programaci-n-1270188c42664282936b6ad84eabff77"
           target="_blank"
           rel="noopener noreferrer"
-          class="bef bef-text-light bef-fontWeight-bold"
+          class="bef bef-text-forestGreen bef-fontWeight-bold"
           >Notion Programación por Lynx Pardelle</a
         >
       </li>
@@ -64,7 +64,7 @@
           href="https://docs.google.com/document/d/16gysb7KHOxwKADUkodHv85ZTqCxG-gcq-aIviVsZVb0/edit?usp=sharing"
           target="_blank"
           rel="noopener noreferrer"
-          class="bef bef-text-light"
+          class="bef bef-text-forestGreen bef-fontWeight-bold"
           >Google Doc Desarrollo Web por Lynx Pardelle</a
         >
       </li>
@@ -73,7 +73,7 @@
           href="https://www.notion.so/lynx-pardelle/Recursos-aprendizaje-desarrollo-web-01a4dc54aa6b4cefbf4abc5e6c5ca7ad"
           target="_blank"
           rel="noopener noreferrer"
-          class="bef bef-text-light"
+          class="bef bef-text-forestGreen bef-fontWeight-bold"
           >Notion Recursos de aprendizaje de desarrollo web por Lynx Pardelle</a
         >
       </li>
@@ -149,7 +149,7 @@
               href="https://www.linkedin.com/in/alecjmr/"
               target="_blank"
               rel="noopener noreferrer"
-              class="bef bef-text-light"
+              class="bef bef-text-forestGreen bef-fontWeight-bold"
               >Linkedin</a
             >
           </li>
@@ -158,7 +158,7 @@
               href="https://lynxpardelle.com/"
               target="_blank"
               rel="noopener noreferrer"
-              class="bef bef-text-light"
+              class="bef bef-text-forestGreen bef-fontWeight-bold"
               >Portafolio</a
             >
           </li>
@@ -167,7 +167,7 @@
               href="https://docs.google.com/document/d/1kTOXeio13ITIdGA2kKE3JLIc6tIxf42LuJu32yICSy4/edit?usp=sharing"
               target="_blank"
               rel="noopener noreferrer"
-              class="bef bef-text-light"
+              class="bef bef-text-forestGreen bef-fontWeight-bold"
               >CV</a
             >
           </li>
@@ -190,7 +190,7 @@
             href="https://github.com/"
             target="_blank"
             rel="noopener noreferrer"
-            class="bef bef-text-light"
+            class="bef bef-text-forestGreen bef-fontWeight-bold"
             >github</a
           >
           .
@@ -267,7 +267,7 @@
         href="https://lynx-bef.vercel.app//"
         target="_blank"
         rel="noopener noreferrer"
-        class="bef bef-text-light"
+        class="bef bef-text-forestGreen bef-fontWeight-bold"
         >Bootstrap-Expanded-Features</a
       >
     </p>
