chore: inicio de clases

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
   <h1 class="bef bef-textAlign-center">
     Curso de Desarrollo web con Lynx Pardelle
   </h1>
+  <h2 class="bef bef-textAlign-center bef-text-old">
+    Inicio de clases: 3 de abril de 2024 a las 8pm hora CDMX
+  </h2>
 </header>
 <main class="bef bef-m-1rem__2rem">
   <section class="bef bef-mb-1rem">
