chore: cambio de fecha de inicio y ajustes a diseño

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <h1 class="bef bef-textAlign-center">
     Curso de Desarrollo web con Lynx Pardelle
   </h1>
-  <h2 class="bef bef-textAlign-center bef-text-old">
-    Inicio de clases: 3 de abril de 2024 a las 8pm hora CDMX
+  <h2 class="bef bef-textAlign-center bef-text-old bef-w-75per bef-mx-auto">
+    Inicio de clases: 10 de abril de 2024 a las 8pm hora CDMX
   </h2>
 </header>
-<main class="bef bef-m-1rem__2rem">
+<main class="bef bef-mx-auto bef-my-1rem bef-wmx-650px bef-w-75per bef-wmn-250px">
   <section class="bef bef-mb-1rem">
     <h2 class="bef bef-mb-1rem">Contenido del curso</h2>
     <p class="bef bef-mb-0_75rem bef-textAlign-justify">
