--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
     Inicio de clases: 10 de abril de 2024 a las 8pm hora CDMX
   </h2>
 </header>
-<main class="bef bef-mx-auto bef-my-1rem bef-wmx-650px bef-w-75per bef-wmn-250px">
+<main
+  class="bef bef-mx-auto bef-my-1rem bef-wmx-650px bef-w-75per bef-wmn-250px"
+>
   <section class="bef bef-mb-1rem">
     <h2 class="bef bef-mb-1rem">Contenido del curso</h2>
     <p class="bef bef-mb-0_75rem bef-textAlign-justify">
@@ -18,6 +20,28 @@
       Se verán las tecnologías de frontend html, css, sass, javascript,
       typescript y Angular, además de las tecnologías de backend nodejs,
       express, mongodb y nestjs en un proyecto completo.
+    </p>
+  </section>
+  <section class="bef bef-mb-1rem">
+    <h2 class="bef bef-mb-1rem">¿En dónde se verá el curso?</h2>
+    <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+      Youtube:
+      <a
+        href="https://www.youtube.com/channel/UCps4hgydTV2mI8G3N51Wq5w"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="bef bef-text-forestGreen bef-fontWeight-bold"
+        >Lynx Pardelle</a
+      >
+    </p>
+    <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+      Twitch:
+      <a
+        href="https://www.twitch.tv/lynxpardelle"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="bef bef-text-forestGreen bef-fontWeight-bold"
+        >Lynx Pardelle</a>
     </p>
   </section>
   <section class="bef bef-mb-1rem">
