--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,15 @@
     Curso de Desarrollo web con Lynx Pardelle
   </h1>
   <h2 class="bef bef-textAlign-center bef-text-old bef-w-75per bef-mx-auto">
-    Inicio de clases: 10 de abril de 2024 a las 8pm hora CDMX
+    Clases: los miércoles a las 8pm hora CDMX
   </h2>
+  <a
+    href="https://chat.whatsapp.com/KrkFFA3i1JS5hvFqA2MdB8"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="bef bef-text-forestGreen bef-fontWeight-bold bef-textAlign-center bef-d-block bef-mb-1rem bef-mx-auto"
+    >Únete al whats para conocer más</a
+  >
 </header>
 <main
   class="bef bef-mx-auto bef-my-1rem bef-wmx-650px bef-w-75per bef-wmn-250px"
@@ -41,7 +48,8 @@
         target="_blank"
         rel="noopener noreferrer"
         class="bef bef-text-forestGreen bef-fontWeight-bold"
-        >Lynx Pardelle</a>
+        >Lynx Pardelle</a
+      >
     </p>
   </section>
   <section class="bef bef-mb-1rem">
@@ -266,7 +274,87 @@
     </ol>
   </section>
   <section class="bef bef-mb-1rem">
-    <h2 class="bef bef-mb-1rem">Reglas para participantes</h2>
+    <h2 class="bef bef-mb-1rem">Clases pasadas:</h2>
+    <article>
+      <h3 class="bef bef-mb-0_75rem">Clase 1</h3>
+      <a
+        href="https://www.facebook.com/AlecLynxPardelle/videos/1160113595010481"
+        target="_blank"
+        class="bef bef-text-forestGreen bef-fontWeight-bold"
+        >Video de la clase</a
+      >
+      <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+        En la primera clase se vieron los siguientes temas:
+      </p>
+      <ul>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Presentación del curso.
+          </p>
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Frontend vs Backend.
+          </p>
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            ¿Qué es devOps y una base de datos a grandes rasgos?
+          </p>
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            ¿Qué es un servidor y cómo funciona?
+          </p>
+        </li>
+      </ul>
+    </article>
+    <article>
+      <h3 class="bef bef-mb-0_75rem">Clase 2</h3>
+      <a
+        href="https://youtube.com/live/VARsZk1ha4w"
+        target="_blank"
+        class="bef bef-text-forestGreen bef-fontWeight-bold"
+        >Video de la clase</a
+      >
+      <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+        En la segunda clase se vieron los siguientes temas:
+      </p>
+      <ul>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Planificación de un proyecto web.
+          </p>
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Propuestas de proyectos web.
+          </p>
+          <a
+            href="https://docs.google.com/document/d/1XnT5Gao4GL-t-ojq4_LjcNQ0ibYxDNsnRjIPcTxFZ-Y/edit?usp=sharing"
+            target="_blank"
+            class="bef bef-text-forestGreen bef-fontWeight-bold"
+            >Propuesta de proyecto de blog genérico</a
+          >
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Características del proyecto web.(MVP, "Minimum Viable Product")
+          </p>
+          <a
+            href="https://docs.google.com/document/d/1P6KPMI9cr_91DbXLGWkHVxRTUafndO3Sw6LYMUIY8b8/edit?usp=sharing"
+            target="_blank"
+            class="bef bef-text-forestGreen bef-fontWeight-bold"
+            >Características de Blog Genérico</a
+          >
+        </li>
+        <li class="bef bef-mb-0_75rem">
+          <p class="bef bef-mb-0_75rem bef-textAlign-justify">
+            Visualización de un plan de trabajo.
+          </p>
+        </li>
+      </ul>
+    </article>
   </section>
   <section class="bef bef-mb-1rem">
     <h2 class="bef bef-mb-1rem">Shortcuts</h2>
